Amend Google Plus Spice - Adjust css to remove border overflow (fixes #1928) - Update to latest Spice API (fixes #1896) - Update to `product` template group

--- a/share/spice/google_plus/google_plus.css
+++ b/share/spice/google_plus/google_plus.css
@@ -1,8 +1,3 @@
-.tile--googleplus {
-    width: 12.4em;
-    height: 17.2em;
-}
-
 .tile--googleplus .tile__media {
     height: 12em;
 }
@@ -12,13 +7,13 @@
     border-radius: 100%;
 }
 
-.tile--googleplus .tile__body {
-    padding: .3em 1em;
-}
-
-.tile--googleplus  .tile__title {
+.tile--googleplus  .tile__title--pr {
     text-align: center;
     font-size: 1.4em;
     font-weight: 400;
     height: 2.5em;
+}
+
+.tile--googleplus .tile--pr__sub {
+    display: none;
 }
